--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: broadcast_bus
 description: A new Flutter package project.
-version: 0.0.1
-author:
+version: 0.0.2
+author: luca.roverelli@gmail.com
 homepage:
 
 environment:
